--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-static-copy": "^0.17.0"
+  },
+  "dependencies": {
+    "particles.js": "^2.0.0"
   }
 }
